--- a/theme/templates/macros.html
+++ b/theme/templates/macros.html
@@ -8,9 +8,11 @@
         <p class="card-text mb-auto">{{ article.content | truncate(100) }}</p>
         <a href="/{{ article.url }}" class="stretched-link">Continue reading</a>
       </div>
+      {% if article.metadata.get("thumbnail") %}
       <div class="col-auto d-none d-lg-block">
         <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
       </div>
+      {% endif %}
     </div>
   </div>
 {% endmacro %}
@@ -26,9 +28,11 @@
         <p class="card-text mb-auto">{{ article.content | truncate(100) }}</p>
         <a href="/{{ article.url }}" class="stretched-link">Continue reading</a>
       </div>
+      {% if article.metadata.get("thumbnail") %}
       <div class="col-auto d-none d-lg-block">
         <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
       </div>
+      {% endif %}
     </div>
   </div>
 {% endmacro %}
