Add Cecilia's art to home page carousel

--- a/theme/templates/includes/carousel.html
+++ b/theme/templates/includes/carousel.html
@@ -5,13 +5,19 @@
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="/images/company.jpg" class="d-block w-100" alt="...">
+              <img src="/images/cecilia_art/ots_logo.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="/images/summerfest.jpg" class="d-block w-100" alt="...">
+              <img src="/images/cecilia_art/picnic.png" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-              <img src="/images/uwm.jpg" class="d-block w-100" alt="...">
+              <img src="/images/cecilia_art/doggo.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="/images/cecilia_art/flowers.png" class="d-block w-100" alt="...">
+            </div>
+            <div class="carousel-item">
+              <img src="/images/cecilia_art/skater.png" class="d-block w-100" alt="...">
             </div>
           </div>
           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
