--- a/theme/templates/includes/carousel.html
+++ b/theme/templates/includes/carousel.html
@@ -2,7 +2,7 @@
   <div class="col-md-12">
     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-white">
       <div class="col p-4 d-flex flex-column position-static">
-        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleControls" class="carousel-dark slide" data-bs-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img src="/images/cecilia_art/ots_logo.png" class="d-block w-100" alt="...">
