--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -45,9 +45,9 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-lg-0">
                 <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                <!-- <li class="nav-item"><a class="nav-link" href="/category/news.html">News</a></li> -->
+                <li class="nav-item"><a class="nav-link" href="/category/news.html">News</a></li>
                 <li class="nav-item"><a class="nav-link" href="/pages/about.html">About</a></li>
-                <!-- <li class="nav-item"><a class="nav-link" href="/category/events.html">Events</a></li> -->
+                <li class="nav-item"><a class="nav-link" href="/category/events.html">Events</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="/pages/gallery.html">Gallery</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="/pages/contact.html">Contact</a></li>
               </ul>
