--- a/theme/templates/macros.html
+++ b/theme/templates/macros.html
@@ -1,16 +1,16 @@
 {% macro card_event(article) %}
   <div class="col-md-12">
-    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative  bg-white">
-      <div class="col p-4 d-flex flex-column position-static">
-        <strong class="d-inline-block mb-2 text-success">Event</strong>
+    <div class="row g-0 p-4 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative  bg-white">
+      <strong class="d-inline-block mb-2 text-success">Event</strong>
+      <div class="col d-flex flex-column position-static">
         <h3 class="mb-0">{{ article.title }}</h3>
         <div class="mb-1 text-muted">{{ article.metadata["event-date"] | format_date() }} at {{ article.metadata["event-location"] }}</div>
-        <p class="card-text mb-auto">{{ article.content | truncate(100) }}</p>
+        <p class="card-text">{{ article.content | truncate(250) }}</p>
         <a href="/{{ article.url }}" class="stretched-link">Continue reading</a>
       </div>
       {% if article.metadata.get("thumbnail") %}
-      <div class="col-auto d-none d-lg-block">
-        <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+      <div class="align-self-center col-auto d-none d-lg-block">
+        <img class="rounded mx-auto d-block" height="250" width="250" src="{{ '/images/' ~ article.metadata['thumbnail'] }}">
       </div>
       {% endif %}
     </div>
@@ -20,17 +20,17 @@
 
 {% macro card_news(article) %}
   <div class="col-md-12">
-    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-white">
-      <div class="col p-4 d-flex flex-column position-static">
-        <strong class="d-inline-block mb-2 text-primary">News</strong>
+    <div class="row g-0 p-4 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-white">
+      <strong class="d-inline-block mb-2 text-primary">News</strong>
+      <div class="col d-flex flex-column position-static">
         <h3 class="mb-0">{{ article.title }}</h3>
         <div class="mb-1 text-muted">{{ article.date | strftime('%B %-d, %Y') }}</div>
-        <p class="card-text mb-auto">{{ article.content | truncate(100) }}</p>
+        <p class="card-text">{{ article.content | truncate(100) }}</p>
         <a href="/{{ article.url }}" class="stretched-link">Continue reading</a>
       </div>
       {% if article.metadata.get("thumbnail") %}
-      <div class="col-auto d-none d-lg-block">
-        <svg class="bd-placeholder-img" width="200" height="250" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+      <div class="align-self-center col-auto d-none d-lg-block">
+        <img class="rounded mx-auto d-block" height="250" width="250" src="{{ '/images/' ~ article.metadata['thumbnail'] }}">
       </div>
       {% endif %}
     </div>
