--- a/theme/static/style.css
+++ b/theme/static/style.css
@@ -1,7 +1,22 @@
 @import "background.css";
 
+.container {
+    max-width: 960px;
+}
+
 body {
     font-family: 'Lora', serif;
+}
+
+.content-card {
+    border: 1px solid #dee2e6;
+    border-radius: .25rem;
+    box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .075);
+    padding: 1.5rem;
+    background-color: #fff;
+    margin-bottom:  1.5rem;
+    overflow: hidden;
+    position: relative;
 }
 
 article {
@@ -23,6 +38,7 @@ article {
 .article-body img {
     height: auto;
     max-width: 80%;
+    width: 300px;
     display: block;
     margin-left: auto;
     margin-right: auto;
