--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -16,40 +16,31 @@
     
   </head>
   <body>
-
-    <div class="container py-3">
-      <header>
-        <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom pb-2 mb-4">
-          <div class="container-fluid">
-            <h2 class="pb-0"><a class="navbar-brand" href="/index.html">{{ SITENAME }}</a></h2>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-lg-0">
-                <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/category/news.html">News</a></li>
-                <li class="nav-item"><a class="nav-link" href="/pages/about.html">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="/category/events.html">Events</a></li>
-                <!-- <li class="nav-item"><a class="nav-link" href="/pages/gallery.html">Gallery</a></li> -->
-                <li class="nav-item"><a class="nav-link" href="/pages/contact.html">Contact</a></li>
-              </ul>
-            </div>
-          </div>
-        </nav>
-      </header>
-  
-      <main>
-        <div class="row justify-content-center">
-          <div class="col-lg-10">
-            {% block content %}{% endblock %}
-          </div>
+      
+    <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom pb-2 mb-4">
+      <div class="container-fluid">
+        <h2 class="pb-0"><a class="navbar-brand" href="/index.html">{{ SITENAME }}</a></h2>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-lg-0">
+            <li class="nav-item"><a class="nav-link" href="/index.html">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="/category/news.html">News</a></li>
+            <li class="nav-item"><a class="nav-link" href="/pages/about.html">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="/category/events.html">Events</a></li>
+            <!-- <li class="nav-item"><a class="nav-link" href="/pages/gallery.html">Gallery</a></li> -->
+            <li class="nav-item"><a class="nav-link" href="/pages/contact.html">Contact</a></li>
+          </ul>
         </div>
-      </main>
+      </div>
+    </nav>
 
-      <footer></footer>
+    <main class="container">
+      {% block content %}{% endblock %}
+    </main>
 
-    </div>
+    <footer></footer>
 
     <!-- Bootstrap JavaScript bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
