--- a/theme/templates/includes/carousel.html
+++ b/theme/templates/includes/carousel.html
@@ -1,37 +1,30 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-white">
-      <div class="col p-4 d-flex flex-column position-static">
-        <div id="carouselLead" class="carousel carousel-dark slide" data-bs-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="/images/cecilia_art/ots_logo.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="/images/cecilia_art/picnic.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="/images/cecilia_art/doggo.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="/images/cecilia_art/flowers.png" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="/images/cecilia_art/skater.png" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselLead" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselLead" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
+<div class="content-card">
+  <div id="carouselLead" class="carousel carousel-dark slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="/images/cecilia_art/ots_logo.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/images/cecilia_art/picnic.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/images/cecilia_art/doggo.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/images/cecilia_art/flowers.png" class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="/images/cecilia_art/skater.png" class="d-block w-100" alt="...">
       </div>
     </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselLead" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselLead" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
 </div>
-
 
