--- a/theme/templates/includes/description.html
+++ b/theme/templates/includes/description.html
@@ -1,11 +1,6 @@
-<div class="row">
-  <div class="col-md-12">
-    <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-white">
-      <div class="col p-4 d-flex flex-column position-static">
-        <p class="lead text-center mb-0">
-          <em>Out There</em> is an experimental performance series curating strange sounds in unique spaces.
-        </p>
-      </div>
-    </div>
-  </div>
+
+<div class="content-card">
+    <p class="lead text-center mb-0">
+      <em>Out There</em> is an experimental performance series curating strange sounds in unique spaces.
+    </p>
 </div>
