--- a/theme/templates/macros.html
+++ b/theme/templates/macros.html
@@ -1,38 +1,34 @@
 {% macro card_event(article) %}
-  <div class="col-md-12">
-    <div class="row g-0 p-4 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative  bg-white">
-      <strong class="d-inline-block mb-2 text-success">Event</strong>
-      <div class="col d-flex flex-column position-static">
-        <h3 class="mb-0">{{ article.title }}</h3>
-        <div class="mb-1 text-muted">{{ article.metadata["event-date"] | format_date() }} at {{ article.metadata["event-location"] }}</div>
-        <p class="card-text">{{ article.content | truncate(250) }}</p>
-        <a href="/{{ article.url }}" class="stretched-link">Continue reading</a>
-      </div>
-      {% if article.metadata.get("thumbnail") %}
-      <div class="align-self-center col-auto d-none d-lg-block">
-        <img class="rounded mx-auto d-block" height="250" width="250" src="{{ '/images/' ~ article.metadata['thumbnail'] }}">
-      </div>
-      {% endif %}
-    </div>
+<div class="content-card row g-0">
+  <strong class="mb-2 text-success">Event</strong>
+  <div class="col">
+    <h3 class="mb-1">{{ article.title }}</h3>
+    <div class="mb-3 text-muted">{{ article.metadata["event-date"] | format_date() }} at {{ article.metadata["event-location"] }}</div>
+    {{ article.content | truncate(250) }}
+    <a href="/{{ article.url }}" class="stretched-link">Continue reading</a>
   </div>
+  {% if article.metadata.get("thumbnail") %}
+  <div class="align-self-center col-auto d-none d-md-block ps-4">
+    <img class="rounded mx-auto d-block" height="200" width="200" src="{{ '/images/' ~ article.metadata['thumbnail'] }}">
+  </div>
+  {% endif %}
+</div>
 {% endmacro %}
 
 
 {% macro card_news(article) %}
-  <div class="col-md-12">
-    <div class="row g-0 p-4 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative bg-white">
-      <strong class="d-inline-block mb-2 text-primary">News</strong>
-      <div class="col d-flex flex-column position-static">
-        <h3 class="mb-0">{{ article.title }}</h3>
-        <div class="mb-1 text-muted">{{ article.date | strftime('%B %-d, %Y') }}</div>
-        <p class="card-text">{{ article.content | truncate(100) }}</p>
-        <a href="/{{ article.url }}" class="stretched-link">Continue reading</a>
-      </div>
-      {% if article.metadata.get("thumbnail") %}
-      <div class="align-self-center col-auto d-none d-lg-block">
-        <img class="rounded mx-auto d-block" height="250" width="250" src="{{ '/images/' ~ article.metadata['thumbnail'] }}">
-      </div>
-      {% endif %}
-    </div>
+<div class="content-card row g-0">
+  <strong class="mb-2 text-primary">News</strong>
+  <div class="col">
+    <h3 class="mb-1">{{ article.title }}</h3>
+    <div class="mb-3 text-muted">Posted on {{ article.date | strftime('%B %-d, %Y') }}</div>
+    {{ article.content | truncate(250) }}
+    <a href="/{{ article.url }}" class="stretched-link">Continue reading</a>
   </div>
+  {% if article.metadata.get("thumbnail") %}
+  <div class="align-self-center col-auto d-none d-md-block ps-4">
+    <img class="rounded mx-auto d-block" height="200" width="200" src="{{ '/images/' ~ article.metadata['thumbnail'] }}">
+  </div>
+  {% endif %}
+</div>
 {% endmacro %}
