--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -13,6 +13,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet"> 
     <link href="{{ SITEURL }}/theme/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.js"></script>
     
   </head>
   <body>
@@ -29,7 +33,7 @@
             <li class="nav-item"><a class="nav-link" href="/category/news.html">News</a></li>
             <li class="nav-item"><a class="nav-link" href="/pages/about.html">About</a></li>
             <li class="nav-item"><a class="nav-link" href="/category/events.html">Events</a></li>
-            <!-- <li class="nav-item"><a class="nav-link" href="/pages/gallery.html">Gallery</a></li> -->
+            <li class="nav-item"><a class="nav-link" href="/pages/gallery.html">Gallery</a></li>
             <li class="nav-item"><a class="nav-link" href="/pages/contact.html">Contact</a></li>
           </ul>
         </div>
@@ -44,6 +48,5 @@
 
     <!-- Bootstrap JavaScript bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-  
   </body>
 </html>
