Add community sponsors image to home and about pages.

--- a/theme/templates/page.html
+++ b/theme/templates/page.html
@@ -14,4 +14,8 @@
     {% endif %}
   </main>
 </div>
+
+{% if page.title == "About" %}
+{% include "includes/sponsors.html" %}
+{% endif %}
 {% endblock %}
