--- a/theme/templates/macros.html
+++ b/theme/templates/macros.html
@@ -20,9 +20,9 @@
 {% endmacro %}
 
 
-{% macro card_news(article) %}
+{% macro card_video(article) %}
 <div class="content-card row g-0">
-  <strong class="mb-2 text-primary">News</strong>
+  <strong class="mb-2 text-primary">Video</strong>
   <div class="col">
     <h3 class="mb-1">{{ article.title }}</h3>
     <div class="mb-3 text-muted">Posted on {{ article.date | strftime('%B %-d, %Y') }}</div>
