--- a/theme/templates/video.html
+++ b/theme/templates/video.html
@@ -8,7 +8,7 @@
     <h3 class="article-title">{{ article.title }}</h3>
     <p class="article-meta">
       Posted on <strong>{{ article.date | strftime('%B %-d, %Y') }}</strong> 
-      in <a href="/category/news.html">News</a>
+      in <a href="/category/videos.html">Videos</a>
     </p>
   </header>
   
