Change carousel images

--- a/theme/templates/includes/carousel.html
+++ b/theme/templates/includes/carousel.html
@@ -2,19 +2,16 @@
   <div id="carouselLead" class="carousel carousel-dark slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/images/cecilia_art/ots_logo.png" class="d-block w-100" alt="...">
+        <img src="/images/2022-07-24_lovemoms/ira_live2.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/images/cecilia_art/picnic.png" class="d-block w-100" alt="...">
+        <img src="/images/2022-08-18_uec/frenia_live.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/images/cecilia_art/doggo.png" class="d-block w-100" alt="...">
+        <img src="/images/2022-08-18_uec/marielle_live.jpg" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item">
-        <img src="/images/cecilia_art/flowers.png" class="d-block w-100" alt="...">
-      </div>
-      <div class="carousel-item">
-        <img src="/images/cecilia_art/skater.png" class="d-block w-100" alt="...">
+        <img src="/images/2022-08-18_uec/roberto_live.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselLead" data-bs-slide="prev">
