--- a/theme/templates/index.html
+++ b/theme/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-  {% include "includes/carousel.html" %}
+  <!-- {% include "includes/carousel.html" %} -->
 
   {% include "includes/description.html" %}
 
