--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -23,7 +23,7 @@
       
     <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom pb-2 mb-4">
       <div class="container-fluid">
-        <h2 class="pb-0"><a class="navbar-brand" href="/index.html">{{ SITENAME }}</a></h2>
+        <a class="navbar-brand" href="/index.html"><h1>{{ SITENAME }}</h1></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
