--- a/theme/static/style.css
+++ b/theme/static/style.css
@@ -44,6 +44,10 @@ article {
     margin-right: auto;
 }
 
+.nav-link {
+    font-size: 1.25rem;
+}
+
 .gallery-item {
 	float: left;
 	margin-bottom: 10px;
