--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -36,6 +36,9 @@
             <li class="nav-item"><a class="nav-link" href="/pages/gallery.html">Gallery</a></li>
             <li class="nav-item"><a class="nav-link" href="/pages/contact.html">Contact</a></li>
           </ul>
+          <a class="navbar-brand d-flex" href="https://www.instagram.com/out_there_series/" target="_blank">
+            <img src="/images/instagram-logo.png" height="25px" width="25px" alt="" class="d-inline-block">
+          </a>
         </div>
       </div>
     </nav>
