--- a/theme/templates/base.html
+++ b/theme/templates/base.html
@@ -21,9 +21,9 @@
   </head>
   <body>
       
-    <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom pb-2 mb-4">
+    <nav class="navbar navbar-expand-sm navbar-light bg-white border-bottom pb-2 px-4 mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/index.html"><h1>{{ SITENAME }}</h1></a>
+        <a class="navbar-brand" href="/index.html"><h1 class="mb-0">{{ SITENAME }}</h1></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
