Speed up carousel and crossfade

--- a/theme/templates/includes/carousel.html
+++ b/theme/templates/includes/carousel.html
@@ -1,16 +1,16 @@
 <div class="content-card">
-  <div id="carouselLead" class="carousel carousel-dark slide" data-bs-ride="carousel">
+  <div id="carouselLead" class="carousel carousel-dark slide carousel-fade" data-bs-ride="carousel">
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item active" data-bs-interval="5000">
         <img src="/images/2022-07-24_lovemoms/ira_live2.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="5000">
         <img src="/images/2022-08-18_uec/frenia_live.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="5000">
         <img src="/images/2022-08-18_uec/marielle_live.jpg" class="d-block w-100" alt="...">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="5000">
         <img src="/images/2022-08-18_uec/roberto_live.jpg" class="d-block w-100" alt="...">
       </div>
     </div>
